--- a/labs/lab1/lab1.qmd
+++ b/labs/lab1/lab1.qmd
@@ -3,6 +3,8 @@ title: "Lab 1: FPGA and MCU Setup and Testing Introduction"
 author: "Avery Smith"
 date: "8/27/24"
 categories:
+  - reflection
+  - labreport
 draft: false
 ---
 
