--- a/labs/lab1/lab1.qmd
+++ b/labs/lab1/lab1.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 1: FPGA and MCU Setup and Testing Introduction"
 author: "Avery Smith"
-date: "8/27/24"
+date: "9/3/24"
 categories:
   - reflection
   - labreport
@@ -9,3 +9,60 @@ draft: false
 ---
 
 ## Lab 1: FPGA and MCU Setup and Testing Introduction
+Time spent: 15 hours
+[GitHub Repository](https://github.com/avsmith11/e155-lab1)
+### Main Goals:
+
+This week, I soldered the dev-board including through-hole and surface-mount technology. I also set up and learned to use the programs used to make this website (Quarto, GitHub) and interface with the FPGA and MCU (QuestaSim, Radiant, Segger, and more GitHub). Finally, I wrote a System Verilog module to control a 7-segment hexadecimal display, built the accompanying circuit, and uploaded it to the FPGA.
+
+
+### Summary:
+I won't go into much detail about the first few parts, since although they took the majority of my time this week, the process of soldering or learning to use tools is not particularly interesting. Instead, I will focus on the design of the final module.
+
+
+The main goal was to make a program to make a seven-segment representation of a hex digit corresponding to 4 dip switches on the dev board. In addition, we were asked to make one of the onboard LEDs blink at 2.4Hz and two more change their states based on the switch positions.
+
+
+The system verilog for this week was straightforward. First, I figured out how to blink the LED. The lab description suggested we use the configurable high-speed oscillator (HSOSC) on the FPGA. I set the frequency to 24MHz and then created a counter to reset at 10,000,000. Since 24MHz/10,000,000 = 2.4Hz, I made the LED change every time the counter resets.
+
+
+The truth tables given for the two other onboard LEDs could be represented as an XOR operator on the first two bits and an AND on the second two. This was easily accomplished with assign statements. Then, I used a case statement to encode the truth table for display outputs.
+
+
+Once this was written, I chased errors mostly due to bad syntax before I imported the file to Questa sim. Getting Questa to work as expected was more difficult than expected, but after using Radiant's simulation wizard to create a new Questa project that included the source program and the libraries for the FPGA (which included the HSCOSC module). Since Questa uses a different compiler than Radiant, there were some more syntax issues I needed to fix. After this was done, I used force commands as suggested to set the switch positions and observed the output in the wave view.
+![](sim1.png)
+![](sim2.png)
+I had some issues getting the s bus to change value even after force statements, but what I saw made enough sense that I decided to move on. Though I didn't know it at the time, I had ordered the bits of the 7-segment display opposite of what I wanted, which you can see in the figures above.
+
+
+After a moderately successful simulation, I looked at the block diagram given by Radiant. ![](top_schematic.png)
+As you can see, despite the very large number required by the counter, the structure is fairly simple. I was also curious how the seg_driver was interpreted, so I found its schematic. I would expect this block to be some K-map simplified gate array, but instead, I saw this ![](seg_schematic.png)
+
+
+This diagram was interesting, and I'd love to learn what Radiant thinks it's doing here but I decided to move on and trust the process.
+
+
+At this point, I had already assembled the 7-segment display circuit. The displays we used have a common-cathode design, meaning the display is powered by one pin, and each segment can be toggled by setting its corresponding pin low so current can drain through the LED. I put a current-limiting resistor on the common cathode. The lab description says these LEDs like to be powered with between 5-20mA. I chose an 80Ohm resistor so that I = 3.3V/50Ohm = 66mA. This way when only 2 segments are lit for the number 1, each gets around 20mA, and when all 7 are lit for the number 8, each gets around 6mA.
+
+
+With the circuit assembled and the pins connected to the FPGA, all that was left was to assign pins (I kept track of the 7-segment display's pins in a text document in the GitHub repo) and upload to the board. I did this but found that a few things still needed to be fixed. ![First Attempt](fail.heic)
+
+
+One segment was not lighting at all as shown in the figure above, and several of the digits were incorrect. I fixed the first issue by changing which pin the segment used. The second issue was caused by the reverse-ordered bits in the seg bus. Once I fixed this, the display was working correctly! All 16 digits are shown below for your viewing pleasure.
+
+![0](0.heic)
+![1](1.heic)
+![2](2.heic)
+![3](3.heic)
+![4](4.heic)
+![5](5.heic)
+![6](6.heic)
+![7](7.heic)
+![8](8.heic)
+![9](9.heic)
+![A](A.heic)
+![b](b.heic)
+![c](c.heic)
+![d](d.heic)
+![e](e.heic)
+![f](f.heic)
