--- a/labs/lab1/lab1.qmd
+++ b/labs/lab1/lab1.qmd
@@ -48,7 +48,7 @@ At this point, I had already assembled the 7-segment display circuit. The displa
 With the circuit assembled and the pins connected to the FPGA, all that was left was to assign pins (I kept track of the 7-segment display's pins in a text document in the GitHub repo) and upload to the board. I did this but found that a few things still needed to be fixed. ![First Attempt](fail.heic)
 
 
-One segment was not lighting at all as shown in the figure above, and several of the digits were incorrect. I fixed the first issue by changing which pin the segment used. The second issue was caused by the reverse-ordered bits in the seg bus. Once I fixed this, the display was working correctly! All 16 digits are shown below for your viewing pleasure.
+One segment was not lighting at all as shown in the figure above, and several of the digits were incorrect. I fixed the first issue by changing which pin the segment used. The second issue was caused by the reverse-ordered bits in the seg bus. Once I fixed this, the display was working correctly and met the requirements of the lab. All 16 digits are shown below for your viewing pleasure.
 
 ![0](0.heic)
 ![1](1.heic)
